<resources>
    <string name="app_name">justtrack example</string>
    <string name="title_activity_game">Game Activity</string>
    <string name="share">Share</string>
    <string name="game">Game</string>
    <string name="loadingAttribution">Loading attribution…</string>
    <string name="show_offerwall">Show offerwall</string>
    <string name="show_interstitial">Show interstitial</string>
    <string name="show_rewarded_video">Show rewarded video</string>
    <string name="scheme">justtrack</string>
    <string name="loading_intent">Loading intent…</string>
    <string name="loading_retargeting_data">Loading retargeting data…</string>
    <string name="no_retargeting_parameters">No retargeting parameters…</string>
    <string name="random_intent">Random Intent</string>
    <string name="retargeting_click">RT Click</string>
    <string name="retargeting_react_native_click">RN RT Click</string>
    <string name="retargeting_unity_click">Unity RT Click</string>
    <string name="retargeting_unity_other_click">Unity RT 2 Click</string>
    <string name="firebase">Firebase</string>
    <string name="btn_anonymous">Anonymize user</string>
    <string name="btn_fail">Fail</string>
    <string name="btn_win">Win</string>
    <string name="generate_revenue">Generate</string>
    <string name="publish_random_events">Publish random events</string>
    <string name="published_0_events">Published 0 events</string>
    <string name="published_1_event">Published 1 event</string>
    <string name="published_n_events">Published {0} events</string>
    <string name="start_app">Start App</string>
    <string name="btn_clear">clear</string>
    <string name="attribution_ip">Attribution IP</string>
    <string name="ipv4_claim_ip">IPv4 Claim IP</string>
    <string name="ipv6_claim_ip">IPv6 Claim IP</string>
    <string name="ipv4_claim_delay">IPv4 Delay (ms)</string>
    <string name="ipv6_claim_delay">IPv6 Delay (ms)</string>
    <string name="referrer">Referrer</string>
    <string name="click_offset">Click offset</string>
    <string name="install_offset">Install Offset</string>
    <string name="log_messages">log messages</string>
    <string name="event_amount">events</string>
    <string name="metric_amount">metrics</string>
    <string name="number_of"># of</string>
    <string name="spam">Spam</string>
    <string name="spam_all">Spam logs and events</string>
    <string name="send_all_event">Send all event</string>

    <string name="inspect_logs">Inspect logs</string>
    <string name="title_activity_set_blocked">SetBlockedActivity</string>
    <string name="title_crash">CrashActivity</string>
    <string name="title_iap">IAPActivity</string>
    <string name="title_activity_kotlin_test">KotlinTestActivity</string>
    <string name="title_integrity">IntegrityActivity</string>
    <string name="attribution_request">Attribution Request</string>
    <string name="track_event_request">Track Event Request</string>
    <string name="custom_user_id_request">Publish Custom User Id Request</string>
    <string name="publish_firebase_instance_id_request">Publish Firebase Instance Id Request</string>
    <string name="log_request">Log Request</string>
    <string name="sign_ipv4_request">Sign IPv4 Request</string>
    <string name="sign_ipv6_request">Sign IPv6 Request</string>
    <string name="select_requests_to_block">Select Requests to block</string>
    <string name="close">Close</string>
    <string name="configure_blocked_requests">Configure blocked requests</string>
    <string name="attribution">Attribution</string>
    <string name="revenue">Revenue</string>
    <string name="logs">Logs</string>
    <string name="select_ad_sdk">Select Ad SDK</string>
    <string name="ad_sdk">Ad SDK</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="noDeepLinkYet">No deeplink was followed yet</string>
    <string name="configure_custom_user_id">Configure Custom User Id</string>
    <string name="crash">Crash</string>
    <string name="crash_normal">Crash Exception</string>
    <string name="crash_anr">Crash ANR</string>
    <string name="soft_anr">Soft ANR</string>
    <string name="fast_anr">Fast ANR</string>
    <string name="crash_deadlock">Crash Deadlock</string>
    <string name="crash_native_abort">SIGABRT</string>
    <string name="crash_native_ill">SIGILL</string>
    <string name="crash_native_segfault">SIGSEGV</string>
    <string name="crash_native_fpe">SIGFPE</string>
    <string name="crash_native_bus">SIGBUS</string>
    <string name="crash_native_pipe">SIGPIPE</string>
    <string name="crash_native_trap">SIGTRAP</string>
    <string name="generate_event_then_crash">Generate event and crash</string>
    <string name="custom_user_id">Custom User Id</string>
    <string name="random_custom_user_id">Random Id</string>
    <string name="set_custom_user_id">Set Custom User Id</string>
    <string name="generate_money">Generate</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_money_event">Select event</string>
    <string name="show_ironsource">Open IronSource</string>
    <string name="enable_ironsource">Enable IronSource</string>
    <string name="show_banner">Show banner</string>
    <string name="select_user_id_source">Select user id source</string>
    <string name="generate_revenue_events">Generate Revenue Events</string>
    <string name="generate_money_events">Generate Money Events</string>
    <string name="select_revenue_event">Select revenue event</string>
    <string name="enable_unity_ads">Enable Unity Ads</string>
    <string name="show_unity_ads">Open Unity Ads</string>
    <string name="show_iap">Open IAP</string>
    <string name="enable_app_lovin">Enable AppLovin</string>
    <string name="show_app_lovin">Open AppLovin</string>
    <string name="show_mediation_debugger">Show Mediation Debugger</string>
    <string name="enable_chartboost">Enable Chartboost</string>
    <string name="show_chartboost">Open Chartboost</string>
    <string name="loading_install_instance_id">Loading install instance id…</string>
    <string name="loading_advertiser_id">Loading advertiser ID…</string>
    <string name="loading_test_group">Loading test group…</string>
    <string name="delete_data">Delete data</string>
    <string name="deleted_data">Deleted all data</string>
    <string name="btn_restart">Restart</string>
    <string name="btn_kotlin">Kotlin Test</string>
    <string name="btn_integrity">Integrity</string>
    <string name="integrate_with_applovin">Integrate with AppLovin</string>
    <string name="integrate_with_applovin_max">Integrate with AppLovin MAX</string>
    <string name="is_tracking">is tracking:</string>
    <string name="is_tracking_start">start</string>
    <string name="is_tracking_stop">stop</string>
    <string name="is_tracking_refresh">refresh</string>
    <string name="re_fetch">fetch</string>
    <string name="manual_start">Manual Start</string>
    <string name="auto_iap">Automatically Track IAP</string>
    <string name="enable_log">Enable log</string>
    <string name="add_custom_log">Add Custom Log</string>
    <string name="btn_set_test_group">SET</string>
    <string name="hint_test_group_test_name">Experiment</string>
    <string name="hint_test_group_group_name">Variant</string>
    <string name="btn_experiment">experiment</string>
    <string name="experiment_fetch">Fetch</string>
    <string name="experiment_activate">Activate</string>
    <string name="experiment_fetch_and_activate">Fetch and Activate</string>
    <string name="experiment_set_test_interval">Set Test Interval</string>

</resources>
